Fixed slide spacing. Optimized slide images.

--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -26,6 +26,7 @@ h1, h2, h3, h4, h5, h6,
   font-family: $font-family-heading;
   font-weight: 200;
   line-height: 1.4;
+  letter-spacing: -0.025em;
 }
 
 h1, .heading--1 { font-size: 4.8rem; }
